# src/app/core/model/user.ts
@@ -1,0 +1,5 @@
+export class User {
+    _id:String;
+    email:String;
+    password:String;
+}
